<resources>
    <string name="app_name">CompQuizizz</string>
    <string name="button">Button</string>
    <string name="sign_up">Create an Account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="user_name">User Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="home_page">CompQuizizz</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="your_highest_score">Your Highest Score</string>
    <string name="highscore_points">123 Points</string>
    <string name="chapter_1_button">Chapter 1: Foundations of Computing</string>
    <string name="chapter_2_button">Chapter 2: Exploring Data Structures</string>
    <string name="chapter_3_button">Chapter 3: Mastering Programming Languages</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="setting">Setting</string>

    <!-- chapter page (hadi)-->
    <string name="description_header">Description:</string>
    <string name="description">Description</string>
    <string name="passing_score_header">Passing Score:</string>
    <string name="passing_score">Passing Score</string>
    <string name="start_btn">START !!</string>

    <!-- History page -->
    <string name="history_page">HISTORY</string>
    <string name="username_history">Username</string>
    <string name="log_in">Log In</string>
    <string name="Register">Register</string>
    <string name="not_have_an_account">Not have an account?</string>
    <string name="learn_about_computer_science_in_a_fun_way">Learn about computer science in a fun way</string>
    <string name="ready_to_explore_something_new">Ready to explore something new?</string>
    <string name="date_2_history">Date</string>
    <string name="chapter">Chapter</string>
    <string name="highscore">Highscore</string>
    <string name="score_1">Score 1</string>
    <string name="score_2">Score 2</string>
    <string name="score_3">Score 3</string>
    <string name="register_startup">Register</string>
    <string name="compquizziz_startup">CompQuizziz</string>
    <string name="welcome_to_startup">Welcome to CompQuizizz!!! Ready to explore something new? Learn about computer science in fun way!!</string>
    <string name="log_in_startup">Log In</string>
    <string name="account">Account</string>
    <string name="compquizziz_login">CompQuizziz</string>
    <string name="log_into_your_login">Log Into Your</string>
    <string name="username_login">Username</string>
    <string name="password_login">Password:</string>
    <string name="chapter_1_history">Chapter</string>
    <string name="date_3_history">Date</string>
    <string name="chapter_3_history">Chapter</string>
    <string name="date_1_history">Date</string>
    <string name="user_s_profile_picture">User\'s profile picture</string>
    <string name="highscore_icon">Highscore Icon</string>

    <!-- quiz page (hadi) -->
    <string name="quiz_title">Quiz Title</string>
    <string name="title_quiz">Title Quiz</string>
    <string name="progress_num">Question:</string>
    <string name="current_progress">1</string>
    <string name="scoreTextView">Your Score:</string>
    <string name="current_score">100</string>
    <string name="question">Question is here</string>
    <string name="answer_1">Answer 1</string>
    <string name="answer_2">Answer 2</string>
    <string name="answer_3">Answer 3</string>
    <string name="next_question">Next</string>
    <string name="prev_button">Prev</string>

    <!-- profile page (hadi) -->
    <string name="full_name">FULL NAME</string>
    <string name="username_profile">USERNAME</string>
    <string name="password_textView">PASSWORD:</string>
    <string name="detailTextView">PERSONAL DETAILS:</string>
    <string name="achievementTextView">ACHIEVEMENT</string>
    <string name="history">History</string>
    <string name="logouttemp">Logout</string>
    <string name="emailLogin">Email:</string>
    <string name="total_score">Total Score</string>
    <string name="loading">Loading</string>
    <string name="your_score">Your score</string>
    <string name="update_profile">Update Profile</string>
    <string name="fullname_text">Fullname</string>
    <string name="mamu_al_bukhari_hint">Mamu Al Bukhari</string>
    <string name="username_text">Username</string>
    <string name="mamualbukhari_hint">MamuAlbukhari</string>
    <string name="address_update_text">Address</string>
    <string name="address_hint">123, Taman Unirest, 05400, Tapah</string>
    <string name="update_text">Update</string>
    <string name="back_button">Back</string>
    <string name="first_nameupdate">First Name</string>
    <string name="last_nameupdate">Last Name</string>
    <string name="countryupdate">Country</string>
    <string name="ageupdate">Age</string>
    <string name="compquizziz">CompQuizizz</string>

    <!-- spinner array country and age -->
    <string-array name="labels_country">
        <item>Country</item>
        <item>Malaysia</item>
        <item>Indonesia</item>
        <item>Singapore</item>
        <item>Thailand</item>
    </string-array>

    <string-array name="labels_age">
        <item>Age</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
    </string-array>

</resources>