<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/sign_up"
            android:textAlignment="center"
            android:textColor="#000"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginTop="30dp"/>

        <!-- User Information Section -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="26dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:baselineAligned="false">

            <!-- First Name Input -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:hintEnabled="false"
                app:boxBackgroundMode="outline">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/round_back_dark_blue"
                    android:hint="@string/first_name"
                    android:inputType="textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Last Name Input -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="8dp"
                app:hintEnabled="false"
                app:boxBackgroundMode="outline"

                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextLastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/round_back_dark_blue"
                    android:hint="@string/last_name"
                    android:inputType="textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
        <!-- username Input -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="false"
            app:boxBackgroundMode="outline"
            android:layout_marginTop="26dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextuName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_name"
                android:inputType="text"
                android:background="@drawable/round_back_dark_blue"


                />
        </com.google.android.material.textfield.TextInputLayout>
        <!-- Email Input -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="false"
            app:boxBackgroundMode="outline"
            android:layout_marginTop="26dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_back_dark_blue"
                android:hint="@string/email"
                android:inputType="textEmailAddress"

                />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Password Input -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="false"
            app:boxBackgroundMode="outline"
            app:endIconMode="password_toggle"
            android:layout_marginTop="26dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_back_dark_blue"
                android:hint="@string/password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Spinners Container -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="26dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:baselineAligned="false">

            <!-- Country Spinner -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="8dp">

                <Spinner
                    android:id="@+id/spinnerCountry"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:minHeight="48dp"
                    android:entries="@array/countries_array"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Age Spinner -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <Spinner
                    android:id="@+id/spinnerAge"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:minHeight="48dp"

                    />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>


        <!-- Register Button -->
        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="34dp"
            android:layout_marginRight="20dp"
            android:text="@string/register"

            />

        <!-- Login Redirect Text -->
        <TextView
            android:id="@+id/textViewLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:text="@string/already_have_an_account" />

    </LinearLayout>
</ScrollView>