<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
   android:layout_width="wrap_content"
    android:layout_height="wrap_content"

    android:padding="5dp"


    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="5dp"
        android:background="@drawable/rounded_20dp_white_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="131dp"
            android:layout_height="match_parent"

            android:orientation="vertical">

            <TextView
                android:id="@+id/date_1_history"
                android:layout_width="100dp"
                android:layout_height="23dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_background_lighter_dark"
                android:gravity="center"
                android:text="@string/date_1_history" />

            <TextView
                android:id="@+id/chapter_1_history"
                android:layout_width="100dp"
                android:layout_height="23dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/rounded_background_lighter_dark"
                android:gravity="center"
                android:text="@string/chapter_1_history" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="217dp"
            android:layout_height="match_parent"

            android:orientation="horizontal">

            <TextView
                android:id="@+id/score_1"
                android:layout_width="117dp"
                android:layout_height="31dp"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/rounded_background_lighter_dark"
                android:gravity="center"
                android:text="@string/score_1" />
        </LinearLayout>


    </LinearLayout>
</LinearLayout>